# CppSerializationGenerator

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: data_pipeline.yml
code_generator/: README.md  clang_util.py  h5type_generator.py  test_clang.py
demo/: CMakeLists.txt  CodeGen_types.h  demo_xtensor.cpp
demo/hdf5/: CodeGen_demo_hdf5.cpp
hdf5/: HDF5IO.h  HDF5_TypeTraits.h
tests/: CMakeLists.txt
tests/unit/: CMakeLists.txt  H5Test.cpp  UtilitiesTest.cpp
